Bug 28112 - [bisect] invalidate rework broke glean paths test
Summary: [bisect] invalidate rework broke glean paths test
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Kristian Høgsberg
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-14 11:57 UTC by Eric Anholt
Modified: 2010-05-17 13:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Eric Anholt 2010-05-14 11:57:27 UTC
Ironlake laptop (x201s)
Server sha1: 421606a8ef447d10c2ee0986f20e752056a47675

Bisecting Mesa on my system for when glean's paths test broke, I get:

db2993faa0211b60efd46016de5d07110cb9777a is the first bad commit
commit db2993faa0211b60efd46016de5d07110cb9777a
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Tue May 11 10:23:34 2010 -0400

    intel: Drop viewport hack when we can

I'm using glean from piglit, run with:
./bin/glean -r asdf -t paths -o --quick

I suspect many of the other broken glean tests will bisect to this one too.
Comment 1 Eric Anholt 2010-05-16 15:33:20 UTC
glean occluQry is also fixed by reverting that change.  Looks a lot like the test just doesn't get a depthbuffer.
Comment 2 Kristian Høgsberg 2010-05-17 13:53:18 UTC
commit 2386d41648d78925b139aea9562325c5b22007eb
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Mon May 17 16:49:55 2010 -0400

    intel: Call intel_draw_buffer() again after _mesa_make_current()
    
    The initial call to intel_draw_buffers() happens when
    intel->ctx.DrawBuffer is still NULL.  Call it again after
    calling _mesa_make_current().
    
    https://bugs.freedesktop.org/show_bug.cgi?id=28112


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.