intel: Call intel_draw_buffer() again after _mesa_make_current()

The initial call to intel_draw_buffers() happens when
intel->ctx.DrawBuffer is still NULL.  Call it again after
calling _mesa_make_current().

https://bugs.freedesktop.org/show_bug.cgi?id=28112